tests/ui/consts/const-extern-fn/issue-68062-const-extern-fns-dont-need-fn-specifier-2.rs
fn main() {}

#[cfg(false)]
fn container() {
    const unsafe WhereIsFerris Now() {}
    //~^ ERROR expected one of `extern` or `fn`
}
